Fix text pre-wrapping

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -156,7 +156,7 @@ header nav{
     margin: 0px 10px;
     width: 45vw;
     overflow-wrap: break-word;
-    white-space: normal;
+    white-space: pre-wrap;
 }
 
 
